# asr-cli-rs

./: .gitignore  Cargo.toml
src/: cli.rs  controller.rs  error.rs  logging.rs  main.rs
src/asr/: base.rs  bcut.rs  google.rs  jianying.rs  manager.rs  mod.rs  selector.rs
src/config/: manager.rs
src/core/: audio_extractor.rs  config_manager.rs  error.rs  file_utils.rs  mod.rs
src/processing/: file_processor.rs  mod.rs  part_manager.rs  progress_manager.rs  text_processor.rs  transcription_processor.rs
src/ui/: progress.rs
